[11-activation-record] upgrade to a.y. 2016/17

--- a/11-record-attivazione/11-record-attivazione.lyx
+++ b/11-record-attivazione/11-record-attivazione.lyx
@@ -95,7 +95,7 @@ Stefano Cherubin
 status open
 
 \begin_layout Plain Layout
-<nome.cognome>@polimi.it
+<nome>.<cognome>@polimi.it
 \end_layout
 
 \end_inset
@@ -104,7 +104,7 @@ status open
 \end_layout
 
 \begin_layout Date
-04/12/2015
+02/12/2016
 \end_layout
 
 \begin_layout Standard
@@ -132,7 +132,7 @@ Informatica A
 \begin_layout Right Address
 corso per Ing.
  Gestionale a.a.
- 2015/16
+ 2016/17
 \end_layout
 
 \begin_layout Standard
@@ -1065,7 +1065,7 @@ int main() {
 
 \begin_layout LyX-Code
 
-	strcpy(orc.name, "Michele");
+	strcpy(orc.name, "Nicholas");
 \end_layout
 
 \begin_layout LyX-Code
